[project]
name = "scale-agents"
version = "0.1.0"
description = "IBM Storage Scale Provisioning Agent with LangChain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
